2000-07-27  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    - At getmxrr() a missed state variable initialization
	      (to zero) caused errorneous eternal loops. OOPS!
	    - smtp_sync() didn't handle RCPTSTATE_500 at all.. (oops).
	    - calls to  stashmyaddresses()  don't need to carry determined
	      self-host-identity.

2000-07-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/msgerror.c:
	    A simple spelling error in normally invisible text sent
	    towards the user inside the delivery status reports.

2000-07-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Possibly  ssfgets()  fell on over-by-one allocation/storage
	    error so that the buffer tail got stomped over, and some
	    systems didn't like it --> they crashed.

	* configure.in, router/db.c, router/libdb/bsdbtree.c,
	  router/libdb/bsdhash.c, smtpserver/policytest.h,
	  smtpserver/policytest.c, utils/makedb/makedb.c,
	  utils/makedb/dblook.c, utils/vacation/vacation.c,
	  README.UPGRADING:
	    Reworked things to support another kind of set of
	    SleepyCat DB libraries.  Not yet covering version 3.x.

	* lib/rfc822scan.c:
	    A bit more characters into "no need to quote these here"
	    set -- allow address <@[1.2.3.4]:foo@bar> and <foo@[1.2.3.4]>

2000-07-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libs/Makefile.in, Makefile.in:
	    Merge  libsfio.a  generation into this file also, so that
	    there is no absolute need to run its make as the first
	    thing among subdirs.
	    Also made top-level "make libs" target which recompiles
	    and/or just reconstructs (with ar) all libraries.

	* transports/smtp/smtp.c:
	    Oops.. Solaris 2.6 --with-bundled-libresolv  does not
	    know about BIND 8 resolver's AD and CD bits.  Don't use
	    them.

	* Makefile.in:
	    Version 2.99.53

	* smtpserver/smtpcmds.c:
	    At MAIL FROM policy reporting we did always yield